--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -65,6 +65,7 @@ header {
       position: absolute;
       width: inherit;
       display: grid;
+      justify-content: space-between;
       grid-template-columns: 0.5fr 0.5fr;
       align-items: center;
       grid-template-rows: 100px max-content;
